Modified color script. Updated to java 21 Updated plugin versions Updated dependencies Converted some classes to use primitive my collections, Using java 21 features