@@ -3,9 +3,10 @@ package hzt.aoc.day01;
 import hzt.aoc.Challenge;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.NavigableSet;
 import java.util.Set;
-import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
 
@@ -13,7 +14,7 @@ public abstract class Day01Challenge extends Challenge {
 
     static final int SUM_TO_BE_FOUND = 2020;
 
-    private final List<Integer[]> integersThatSumTo2020List = new ArrayList<>();
+    private final List<int[]> integersThatSumTo2020List = new ArrayList<>();
 
     protected Day01Challenge(final String challenge, final String description) {
         super(challenge, description, "20201201-input-day1.txt");
@@ -25,16 +26,16 @@ public abstract class Day01Challenge extends Challenge {
         integersThatSumTo2020List.clear();
         integersThatSumTo2020List.addAll(findIntegersListThatSumTo2020(new TreeSet<>(integers)));
         LOGGER.trace(() -> getMessage(integersThatSumTo2020List));
-        return String.valueOf(calculateProduct(integersThatSumTo2020List.get(0)));
+        return String.valueOf(calculateProduct(integersThatSumTo2020List.getFirst()));
     }
 
-    protected abstract List<Integer[]> findIntegersListThatSumTo2020(SortedSet<Integer> integers);
+    protected abstract List<int[]> findIntegersListThatSumTo2020(NavigableSet<Integer> integers);
 
-    public String getMessage(final List<Integer[]> integersThatSumTo2020List) {
+    public String getMessage(final List<int[]> integersThatSumTo2020List) {
         final StringBuilder sb = new StringBuilder();
         final String message = String.format("Output size: %d%n", integersThatSumTo2020List.size());
         sb.append(message);
-        for (final Integer[] entries : integersThatSumTo2020List) {
+        for (final var entries : integersThatSumTo2020List) {
             final StringBuilder isb = new StringBuilder();
             long product = 1;
             for (final Integer integer : entries) {
@@ -48,12 +49,8 @@ public abstract class Day01Challenge extends Challenge {
         return sb.toString();
     }
 
-    private long calculateProduct(final Integer[] entries) {
-        long product = 1;
-        for (final Integer integer : entries) {
-            product *= integer;
-        }
-        return product;
+    private long calculateProduct(final int[] entries) {
+        return Arrays.stream(entries).reduce(1, (product, i) -> product * i);
     }
 
     @Override
